; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_lockdep.c_lock_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_lockdep.c_lock_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.lockdep_map = type { i32 }

@current = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lock_release(%struct.lockdep_map* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.lockdep_map*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.lockdep_map* %0, %struct.lockdep_map** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %8 = load %struct.lockdep_map*, %struct.lockdep_map** %4, align 8
  %9 = load i64, i64* %6, align 8
  %10 = call i32 @trace_lock_release(%struct.lockdep_map* %8, i64 %9)
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @unlikely(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %3
  br label %32

17:                                               ; preds = %3
  %18 = load i64, i64* %7, align 8
  %19 = call i32 @raw_local_irq_save(i64 %18)
  %20 = load i64, i64* %7, align 8
  %21 = call i32 @check_flags(i64 %20)
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  store i32 1, i32* %23, align 4
  %24 = load %struct.lockdep_map*, %struct.lockdep_map** %4, align 8
  %25 = load i32, i32* %5, align 4
  %26 = load i64, i64* %6, align 8
  %27 = call i32 @__lock_release(%struct.lockdep_map* %24, i32 %25, i64 %26)
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  store i32 0, i32* %29, align 4
  %30 = load i64, i64* %7, align 8
  %31 = call i32 @raw_local_irq_restore(i64 %30)
  br label %32

32:                                               ; preds = %17, %16
  ret void
}

declare dso_local i32 @trace_lock_release(%struct.lockdep_map*, i64) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @raw_local_irq_save(i64) #1

declare dso_local i32 @check_flags(i64) #1

declare dso_local i32 @__lock_release(%struct.lockdep_map*, i32, i64) #1

declare dso_local i32 @raw_local_irq_restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
